@@ -276,3 +276,8 @@ Sun Oct 27 00:13:00 2002 <dan@dennedy.org>
 Mon Nov 18 10:15:23 2002 <ddouxchamps@users.sf.net>
     * we now use packet_per_frame correctly for format7. This should
       fix 'walking' frames in DMA mode.
+	
+Mon Nov 20 10:35:00 2002 <ddouxchamps@users.sf.net>
+    * Use a little trick from Martin Gramatke to avoid misinterpreta-
+      tion of TOTAL_BYTES registers. We don't use the latter register
+      anymore.
